--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.14.1",
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.14.0",
+    "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
