--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "flowbite-react": "^0.12.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.10",
+    "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.9.4",
