--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "@mui/icons-material": "^7.3.4",
     "@mui/material": "^7.3.4",
     "@mui/x-data-grid": "^8.14.0",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "axios": "^1.12.2",
     "bootstrap": "^5.3.8",
     "file-saver": "^2.0.5",
     "flowbite": "^3.1.2",
     "flowbite-react": "^0.12.9",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^2.10.10",
     "react-daum-postcode": "^3.2.0",
     "react-dom": "^18.3.1",
